--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div><a href="" class="logo">TastyTrove</a></div>
             <nav class="n1">
                     <ul class="ul1">
-                        <li class="l1"><a href="#" class="a1">Home</a></li>
+                        <li class="l1"><a href="index.html" class="a1">Home</a></li>
                         <li class="l1"><a href="recipe.html" class="a1">Recipes</a></li>
                         <li class="l1"><a href="submit.html" class="a1">Submit</a></li>
                         <li class="l1"><a href="about.html" class="a1">About</a></li>
@@ -24,7 +24,7 @@
         </header>
 
         <section class="s1">
-            <h1>Welcome to TasteTrove</h1><br>
+            <h1>Welcome to TastyTrove</h1><br>
             <p>Freshly picked ideas and recipes from kitchens around the world</p><br>
             <button class="b1"><a href="recipe.html">Explore Recipe</a></button>
             <button class="b1"><a href="submit.html">Submit Recipe</a></button>
